create title scene

--- a/GoudouGameJam/Assembly-CSharp.csproj
+++ b/GoudouGameJam/Assembly-CSharp.csproj
@@ -146,10 +146,15 @@
      <Compile Include="Assets\OVR\Scripts\Util\OVRUGUI.cs" />
      <Compile Include="Assets\OVR\Scripts\Util\OVRVisionGuide.cs" />
      <Compile Include="Assets\Salmon.cs" />
+     <Compile Include="Assets\Script\AudioManager.cs" />
+     <Compile Include="Assets\Script\GameManeger.cs" />
      <Compile Include="Assets\Script\Note.cs" />
      <Compile Include="Assets\Script\NoteCollector.cs" />
      <Compile Include="Assets\Script\NoteFactory.cs" />
      <Compile Include="Assets\Script\Score.cs" />
+     <Compile Include="Assets\Script\SingletonMonoBehaviour.cs" />
+     <Compile Include="Assets\Script\SingletonMonoBehaviourTNewBehaviourScript.cs" />
+     <Compile Include="Assets\Script\Sound.cs" />
      <Compile Include="Assets\scene\TestLeap.cs" />
      <None Include="Assets\LeapMotion\Materials\Sources\Shaders\Toony-Basic.shader" />
      <None Include="Assets\LeapMotion\Resources\LeapCG.cginc" />
